// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MostReadList should render with ltr bengali items with correct dir 1`] = `
.c1 {
  list-style-type: none;
  margin: 0;
  padding: 0;
  grid-auto-flow: column;
  grid-template-rows: repeat( 5,[col-start] auto [col-end] );
}

.c7 {
  font-size: 1.625rem;
  line-height: 1.875rem;
  font-family: "Shonar Bangla",Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7:hover,
.c7:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.c6 {
  padding-bottom: 1.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  margin: 0;
  padding: 0;
}

.c5 {
  font-family: "Shonar Bangla",Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 2rem;
  line-height: 2.25rem;
  position: relative;
  color: #B80000;
  margin: 0;
  padding: 0;
}

@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c2 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c2 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c2 {
    width: calc(20%);
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c2 {
    display: block;
  }
}

@media (max-width:24.9375rem) {
  .c1 {
    grid-template-rows: repeat( 10,[col-start] auto [col-end] );
  }
}

@media (min-width:80rem) {
  .c1 {
    grid-auto-flow: row;
    grid-template-rows: repeat( 5,[col-start] auto [col-end] );
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c7 {
    font-size: 1.625rem;
    line-height: 1.875rem;
  }
}

@media (min-width:37.5rem) {
  .c7 {
    font-size: 1.75rem;
    line-height: 2rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c6 {
    padding-right: 0;
  }
}

@media (max-width:14.9375rem) {
  .c4 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c4 {
    min-width: 2rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c4 {
    min-width: auto;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c4 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c4 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c8 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c8 {
    min-width: 2rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c8 {
    min-width: 2rem;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c8 {
    min-width: 3rem;
  }
}

@media (min-width:80rem) {
  .c8 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c9 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c9 {
    min-width: 2rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c9 {
    min-width: auto;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c9 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c9 {
    min-width: 3rem;
  }
}

@media (max-width:14.9375rem) {
  .c10 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c10 {
    min-width: 2rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c10 {
    min-width: 2rem;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c10 {
    min-width: 3rem;
  }
}

@media (min-width:80rem) {
  .c10 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c11 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c11 {
    min-width: 2rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c11 {
    min-width: auto;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c11 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c11 {
    min-width: auto;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c5 {
    font-size: 2.5rem;
    line-height: 2.75rem;
  }
}

@media (min-width:37.5rem) {
  .c5 {
    font-size: 3.5rem;
    line-height: 3.75rem;
  }
}

<ol
  class="c0 c1"
  dir="ltr"
  role="list"
>
  <div
    as="li"
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
        dir="ltr"
      >
        <span
          class="c5"
        >
          ১
        </span>
      </div>
      <div
        class="c6"
        dir="ltr"
      >
        <a
          class="c7"
          href="https://www.bbc.com/bengali/articles/c6p3yp5zzmeo"
        >
          ভিসা ফুরিয়ে যাওয়ায় ক্রিকেটার সাইফের জরিমানা
        </a>
      </div>
    </div>
  </div>
  <div
    as="li"
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c8"
        dir="ltr"
      >
        <span
          class="c5"
        >
          ২
        </span>
      </div>
      <div
        class="c6"
        dir="ltr"
      >
        <a
          class="c7"
          href="https://www.bbc.com/bengali/articles/c6p3yp5zzmeo"
        >
          ভিসা ফুরিয়ে যাওয়ায় ক্রিকেটার সাইফের জরিমানা
        </a>
      </div>
    </div>
  </div>
  <div
    as="li"
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
        dir="ltr"
      >
        <span
          class="c5"
        >
          ৩
        </span>
      </div>
      <div
        class="c6"
        dir="ltr"
      >
        <a
          class="c7"
          href="https://www.bbc.com/bengali/articles/c6p3yp5zzmeo"
        >
          ভিসা ফুরিয়ে যাওয়ায় ক্রিকেটার সাইফের জরিমানা
        </a>
      </div>
    </div>
  </div>
  <div
    as="li"
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c8"
        dir="ltr"
      >
        <span
          class="c5"
        >
          ৪
        </span>
      </div>
      <div
        class="c6"
        dir="ltr"
      >
        <a
          class="c7"
          href="https://www.bbc.com/bengali/articles/c6p3yp5zzmeo"
        >
          ভিসা ফুরিয়ে যাওয়ায় ক্রিকেটার সাইফের জরিমানা
        </a>
      </div>
    </div>
  </div>
  <div
    as="li"
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c9"
        dir="ltr"
      >
        <span
          class="c5"
        >
          ৫
        </span>
      </div>
      <div
        class="c6"
        dir="ltr"
      >
        <a
          class="c7"
          href="https://www.bbc.com/bengali/articles/c6p3yp5zzmeo"
        >
          ভিসা ফুরিয়ে যাওয়ায় ক্রিকেটার সাইফের জরিমানা
        </a>
      </div>
    </div>
  </div>
  <div
    as="li"
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c10"
        dir="ltr"
      >
        <span
          class="c5"
        >
          ৬
        </span>
      </div>
      <div
        class="c6"
        dir="ltr"
      >
        <a
          class="c7"
          href="https://www.bbc.com/bengali/articles/c6p3yp5zzmeo"
        >
          ভিসা ফুরিয়ে যাওয়ায় ক্রিকেটার সাইফের জরিমানা
        </a>
      </div>
    </div>
  </div>
  <div
    as="li"
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c11"
        dir="ltr"
      >
        <span
          class="c5"
        >
          ৭
        </span>
      </div>
      <div
        class="c6"
        dir="ltr"
      >
        <a
          class="c7"
          href="https://www.bbc.com/bengali/articles/c6p3yp5zzmeo"
        >
          ভিসা ফুরিয়ে যাওয়ায় ক্রিকেটার সাইফের জরিমানা
        </a>
      </div>
    </div>
  </div>
  <div
    as="li"
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c10"
        dir="ltr"
      >
        <span
          class="c5"
        >
          ৮
        </span>
      </div>
      <div
        class="c6"
        dir="ltr"
      >
        <a
          class="c7"
          href="https://www.bbc.com/bengali/articles/c6p3yp5zzmeo"
        >
          ভিসা ফুরিয়ে যাওয়ায় ক্রিকেটার সাইফের জরিমানা
        </a>
      </div>
    </div>
  </div>
  <div
    as="li"
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c11"
        dir="ltr"
      >
        <span
          class="c5"
        >
          ৯
        </span>
      </div>
      <div
        class="c6"
        dir="ltr"
      >
        <a
          class="c7"
          href="https://www.bbc.com/bengali/articles/c6p3yp5zzmeo"
        >
          ভিসা ফুরিয়ে যাওয়ায় ক্রিকেটার সাইফের জরিমানা
        </a>
      </div>
    </div>
  </div>
  <div
    as="li"
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c10"
        dir="ltr"
      >
        <span
          class="c5"
        >
          ১০
        </span>
      </div>
      <div
        class="c6"
        dir="ltr"
      >
        <a
          class="c7"
          href="https://www.bbc.com/bengali/articles/c6p3yp5zzmeo"
        >
          ভিসা ফুরিয়ে যাওয়ায় ক্রিকেটার সাইফের জরিমানা
        </a>
      </div>
    </div>
  </div>
</ol>
`;

exports[`MostReadList should render with ltr burmese items with correct dir 1`] = `
.c1 {
  list-style-type: none;
  margin: 0;
  padding: 0;
  grid-auto-flow: column;
  grid-template-rows: repeat( 5,[col-start] auto [col-end] );
}

.c7 {
  font-size: 1.25rem;
  line-height: 1.875rem;
  font-family: Padauk,Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7:hover,
.c7:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.c6 {
  padding-bottom: 1.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  margin: 0;
  padding: 0;
}

.c5 {
  font-family: Padauk,Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 2rem;
  line-height: 2.25rem;
  position: relative;
  color: #B80000;
  margin: 0;
  padding: 0;
}

@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c2 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c2 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c2 {
    width: calc(20%);
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c2 {
    display: block;
  }
}

@media (max-width:24.9375rem) {
  .c1 {
    grid-template-rows: repeat( 10,[col-start] auto [col-end] );
  }
}

@media (min-width:80rem) {
  .c1 {
    grid-auto-flow: row;
    grid-template-rows: repeat( 5,[col-start] auto [col-end] );
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c7 {
    font-size: 1.25rem;
    line-height: 1.875rem;
  }
}

@media (min-width:37.5rem) {
  .c7 {
    font-size: 1.625rem;
    line-height: 2.75rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c6 {
    padding-right: 0;
  }
}

@media (max-width:14.9375rem) {
  .c4 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c4 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c4 {
    min-width: auto;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c4 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c4 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c8 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c8 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c8 {
    min-width: 2.5rem;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c8 {
    min-width: 4rem;
  }
}

@media (min-width:80rem) {
  .c8 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c9 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c9 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c9 {
    min-width: auto;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c9 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c9 {
    min-width: 4.25rem;
  }
}

@media (max-width:14.9375rem) {
  .c10 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c10 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c10 {
    min-width: 2.5rem;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c10 {
    min-width: 4rem;
  }
}

@media (min-width:80rem) {
  .c10 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c11 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c11 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c11 {
    min-width: auto;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c11 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c11 {
    min-width: auto;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c5 {
    font-size: 2.5rem;
    line-height: 4.125rem;
  }
}

@media (min-width:37.5rem) {
  .c5 {
    font-size: 3.5rem;
    line-height: 5.375rem;
  }
}

<ol
  class="c0 c1"
  dir="ltr"
  role="list"
>
  <div
    as="li"
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
        dir="ltr"
      >
        <span
          class="c5"
        >
          ၁
        </span>
      </div>
      <div
        class="c6"
        dir="ltr"
      >
        <a
          class="c7"
          href="https://www.bbc.com/burmese/articles/c3w1kwwmm5yo"
        >
          အောက်စဖို့ဒ် ဆရာတော် ပါမောက္ခ ဒေါက်တာအရှင်ဓမ္မသာမိ
        </a>
      </div>
    </div>
  </div>
  <div
    as="li"
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c8"
        dir="ltr"
      >
        <span
          class="c5"
        >
          ၂
        </span>
      </div>
      <div
        class="c6"
        dir="ltr"
      >
        <a
          class="c7"
          href="https://www.bbc.com/burmese/articles/c3w1kwwmm5yo"
        >
          အောက်စဖို့ဒ် ဆရာတော် ပါမောက္ခ ဒေါက်တာအရှင်ဓမ္မသာမိ
        </a>
      </div>
    </div>
  </div>
  <div
    as="li"
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
        dir="ltr"
      >
        <span
          class="c5"
        >
          ၃
        </span>
      </div>
      <div
        class="c6"
        dir="ltr"
      >
        <a
          class="c7"
          href="https://www.bbc.com/burmese/articles/c3w1kwwmm5yo"
        >
          အောက်စဖို့ဒ် ဆရာတော် ပါမောက္ခ ဒေါက်တာအရှင်ဓမ္မသာမိ
        </a>
      </div>
    </div>
  </div>
  <div
    as="li"
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c8"
        dir="ltr"
      >
        <span
          class="c5"
        >
          ၄
        </span>
      </div>
      <div
        class="c6"
        dir="ltr"
      >
        <a
          class="c7"
          href="https://www.bbc.com/burmese/articles/c3w1kwwmm5yo"
        >
          အောက်စဖို့ဒ် ဆရာတော် ပါမောက္ခ ဒေါက်တာအရှင်ဓမ္မသာမိ
        </a>
      </div>
    </div>
  </div>
  <div
    as="li"
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c9"
        dir="ltr"
      >
        <span
          class="c5"
        >
          ၅
        </span>
      </div>
      <div
        class="c6"
        dir="ltr"
      >
        <a
          class="c7"
          href="https://www.bbc.com/burmese/articles/c3w1kwwmm5yo"
        >
          အောက်စဖို့ဒ် ဆရာတော် ပါမောက္ခ ဒေါက်တာအရှင်ဓမ္မသာမိ
        </a>
      </div>
    </div>
  </div>
  <div
    as="li"
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c10"
        dir="ltr"
      >
        <span
          class="c5"
        >
          ၆
        </span>
      </div>
      <div
        class="c6"
        dir="ltr"
      >
        <a
          class="c7"
          href="https://www.bbc.com/burmese/articles/c3w1kwwmm5yo"
        >
          အောက်စဖို့ဒ် ဆရာတော် ပါမောက္ခ ဒေါက်တာအရှင်ဓမ္မသာမိ
        </a>
      </div>
    </div>
  </div>
  <div
    as="li"
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c11"
        dir="ltr"
      >
        <span
          class="c5"
        >
          ၇
        </span>
      </div>
      <div
        class="c6"
        dir="ltr"
      >
        <a
          class="c7"
          href="https://www.bbc.com/burmese/articles/c3w1kwwmm5yo"
        >
          အောက်စဖို့ဒ် ဆရာတော် ပါမောက္ခ ဒေါက်တာအရှင်ဓမ္မသာမိ
        </a>
      </div>
    </div>
  </div>
  <div
    as="li"
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c10"
        dir="ltr"
      >
        <span
          class="c5"
        >
          ၈
        </span>
      </div>
      <div
        class="c6"
        dir="ltr"
      >
        <a
          class="c7"
          href="https://www.bbc.com/burmese/articles/c3w1kwwmm5yo"
        >
          အောက်စဖို့ဒ် ဆရာတော် ပါမောက္ခ ဒေါက်တာအရှင်ဓမ္မသာမိ
        </a>
      </div>
    </div>
  </div>
  <div
    as="li"
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c11"
        dir="ltr"
      >
        <span
          class="c5"
        >
          ၉
        </span>
      </div>
      <div
        class="c6"
        dir="ltr"
      >
        <a
          class="c7"
          href="https://www.bbc.com/burmese/articles/c3w1kwwmm5yo"
        >
          အောက်စဖို့ဒ် ဆရာတော် ပါမောက္ခ ဒေါက်တာအရှင်ဓမ္မသာမိ
        </a>
      </div>
    </div>
  </div>
  <div
    as="li"
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c10"
        dir="ltr"
      >
        <span
          class="c5"
        >
          ၁၀
        </span>
      </div>
      <div
        class="c6"
        dir="ltr"
      >
        <a
          class="c7"
          href="https://www.bbc.com/burmese/articles/c3w1kwwmm5yo"
        >
          အောက်စဖို့ဒ် ဆရာတော် ပါမောက္ခ ဒေါက်တာအရှင်ဓမ္မသာမိ
        </a>
      </div>
    </div>
  </div>
</ol>
`;

exports[`MostReadList should render with ltr news items with correct dir 1`] = `
.c1 {
  list-style-type: none;
  margin: 0;
  padding: 0;
  grid-auto-flow: column;
  grid-template-rows: repeat( 5,[col-start] auto [col-end] );
}

.c7 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7:hover,
.c7:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.c6 {
  padding-bottom: 1.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  margin: 0;
  padding: 0;
}

.c5 {
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 300;
  font-style: normal;
  font-size: 2rem;
  line-height: 2.25rem;
  position: relative;
  color: #B80000;
  margin: 0;
  padding: 0;
}

@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c2 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c2 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c2 {
    width: calc(20%);
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c2 {
    display: block;
  }
}

@media (max-width:24.9375rem) {
  .c1 {
    grid-template-rows: repeat( 10,[col-start] auto [col-end] );
  }
}

@media (min-width:80rem) {
  .c1 {
    grid-auto-flow: row;
    grid-template-rows: repeat( 5,[col-start] auto [col-end] );
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c7 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c7 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c6 {
    padding-right: 0;
  }
}

@media (max-width:14.9375rem) {
  .c4 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c4 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c4 {
    min-width: auto;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c4 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c4 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c8 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c8 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c8 {
    min-width: 2.5rem;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c8 {
    min-width: 4rem;
  }
}

@media (min-width:80rem) {
  .c8 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c9 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c9 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c9 {
    min-width: auto;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c9 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c9 {
    min-width: 4.25rem;
  }
}

@media (max-width:14.9375rem) {
  .c10 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c10 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c10 {
    min-width: 2.5rem;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c10 {
    min-width: 4rem;
  }
}

@media (min-width:80rem) {
  .c10 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c11 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c11 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c11 {
    min-width: auto;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c11 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c11 {
    min-width: auto;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c5 {
    font-size: 2.5rem;
    line-height: 2.75rem;
  }
}

@media (min-width:37.5rem) {
  .c5 {
    font-size: 3.5rem;
    line-height: 3.75rem;
  }
}

<ol
  class="c0 c1"
  dir="ltr"
  role="list"
>
  <div
    as="li"
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
        dir="ltr"
      >
        <span
          class="c5"
        >
          1
        </span>
      </div>
      <div
        class="c6"
        dir="ltr"
      >
        <a
          class="c7"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </div>
  <div
    as="li"
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c8"
        dir="ltr"
      >
        <span
          class="c5"
        >
          2
        </span>
      </div>
      <div
        class="c6"
        dir="ltr"
      >
        <a
          class="c7"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </div>
  <div
    as="li"
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
        dir="ltr"
      >
        <span
          class="c5"
        >
          3
        </span>
      </div>
      <div
        class="c6"
        dir="ltr"
      >
        <a
          class="c7"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </div>
  <div
    as="li"
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c8"
        dir="ltr"
      >
        <span
          class="c5"
        >
          4
        </span>
      </div>
      <div
        class="c6"
        dir="ltr"
      >
        <a
          class="c7"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </div>
  <div
    as="li"
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c9"
        dir="ltr"
      >
        <span
          class="c5"
        >
          5
        </span>
      </div>
      <div
        class="c6"
        dir="ltr"
      >
        <a
          class="c7"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </div>
  <div
    as="li"
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c10"
        dir="ltr"
      >
        <span
          class="c5"
        >
          6
        </span>
      </div>
      <div
        class="c6"
        dir="ltr"
      >
        <a
          class="c7"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </div>
  <div
    as="li"
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c11"
        dir="ltr"
      >
        <span
          class="c5"
        >
          7
        </span>
      </div>
      <div
        class="c6"
        dir="ltr"
      >
        <a
          class="c7"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </div>
  <div
    as="li"
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c10"
        dir="ltr"
      >
        <span
          class="c5"
        >
          8
        </span>
      </div>
      <div
        class="c6"
        dir="ltr"
      >
        <a
          class="c7"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </div>
  <div
    as="li"
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c11"
        dir="ltr"
      >
        <span
          class="c5"
        >
          9
        </span>
      </div>
      <div
        class="c6"
        dir="ltr"
      >
        <a
          class="c7"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </div>
  <div
    as="li"
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c10"
        dir="ltr"
      >
        <span
          class="c5"
        >
          10
        </span>
      </div>
      <div
        class="c6"
        dir="ltr"
      >
        <a
          class="c7"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </div>
</ol>
`;

exports[`MostReadList should render with rtl arabic items with correct dir 1`] = `
.c1 {
  list-style-type: none;
  margin: 0;
  padding: 0;
  grid-auto-flow: column;
  grid-template-rows: repeat( 5,[col-start] auto [col-end] );
}

.c7 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "BBC Nassim Persian",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7:hover,
.c7:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.c6 {
  padding-bottom: 1.5rem;
  padding-right: 1rem;
  padding-left: 1rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  margin: 0;
  padding: 0;
}

.c5 {
  font-family: "BBC Nassim Persian",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 2rem;
  line-height: 2.25rem;
  position: relative;
  color: #B80000;
  margin: 0;
  padding: 0;
}

@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c2 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c2 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c2 {
    width: calc(20%);
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c2 {
    display: block;
  }
}

@media (max-width:24.9375rem) {
  .c1 {
    grid-template-rows: repeat( 10,[col-start] auto [col-end] );
  }
}

@media (min-width:80rem) {
  .c1 {
    grid-auto-flow: row;
    grid-template-rows: repeat( 5,[col-start] auto [col-end] );
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c7 {
    font-size: 1.625rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c7 {
    font-size: 1.75rem;
    line-height: 2.25rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c6 {
    padding-left: 0;
  }
}

@media (max-width:14.9375rem) {
  .c4 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c4 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c4 {
    min-width: auto;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c4 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c4 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c8 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c8 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c8 {
    min-width: 2.5rem;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c8 {
    min-width: 4rem;
  }
}

@media (min-width:80rem) {
  .c8 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c9 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c9 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c9 {
    min-width: auto;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c9 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c9 {
    min-width: 4.25rem;
  }
}

@media (max-width:14.9375rem) {
  .c10 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c10 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c10 {
    min-width: 2.5rem;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c10 {
    min-width: 4rem;
  }
}

@media (min-width:80rem) {
  .c10 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c11 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c11 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c11 {
    min-width: auto;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c11 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c11 {
    min-width: auto;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c5 {
    font-size: 2.5rem;
    line-height: 2.75rem;
  }
}

@media (min-width:37.5rem) {
  .c5 {
    font-size: 3.5rem;
    line-height: 3.75rem;
  }
}

<ol
  class="c0 c1"
  dir="rtl"
  role="list"
>
  <div
    as="li"
    class="c2"
    dir="rtl"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
        dir="rtl"
      >
        <span
          class="c5"
        >
          ۱
        </span>
      </div>
      <div
        class="c6"
        dir="rtl"
      >
        <a
          class="c7"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </div>
  <div
    as="li"
    class="c2"
    dir="rtl"
  >
    <div
      class="c3"
    >
      <div
        class="c8"
        dir="rtl"
      >
        <span
          class="c5"
        >
          ۲
        </span>
      </div>
      <div
        class="c6"
        dir="rtl"
      >
        <a
          class="c7"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </div>
  <div
    as="li"
    class="c2"
    dir="rtl"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
        dir="rtl"
      >
        <span
          class="c5"
        >
          ۳
        </span>
      </div>
      <div
        class="c6"
        dir="rtl"
      >
        <a
          class="c7"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </div>
  <div
    as="li"
    class="c2"
    dir="rtl"
  >
    <div
      class="c3"
    >
      <div
        class="c8"
        dir="rtl"
      >
        <span
          class="c5"
        >
          ۴
        </span>
      </div>
      <div
        class="c6"
        dir="rtl"
      >
        <a
          class="c7"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </div>
  <div
    as="li"
    class="c2"
    dir="rtl"
  >
    <div
      class="c3"
    >
      <div
        class="c9"
        dir="rtl"
      >
        <span
          class="c5"
        >
          ۵
        </span>
      </div>
      <div
        class="c6"
        dir="rtl"
      >
        <a
          class="c7"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </div>
  <div
    as="li"
    class="c2"
    dir="rtl"
  >
    <div
      class="c3"
    >
      <div
        class="c10"
        dir="rtl"
      >
        <span
          class="c5"
        >
          ۶
        </span>
      </div>
      <div
        class="c6"
        dir="rtl"
      >
        <a
          class="c7"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </div>
  <div
    as="li"
    class="c2"
    dir="rtl"
  >
    <div
      class="c3"
    >
      <div
        class="c11"
        dir="rtl"
      >
        <span
          class="c5"
        >
          ۷
        </span>
      </div>
      <div
        class="c6"
        dir="rtl"
      >
        <a
          class="c7"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </div>
  <div
    as="li"
    class="c2"
    dir="rtl"
  >
    <div
      class="c3"
    >
      <div
        class="c10"
        dir="rtl"
      >
        <span
          class="c5"
        >
          ۸
        </span>
      </div>
      <div
        class="c6"
        dir="rtl"
      >
        <a
          class="c7"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </div>
  <div
    as="li"
    class="c2"
    dir="rtl"
  >
    <div
      class="c3"
    >
      <div
        class="c11"
        dir="rtl"
      >
        <span
          class="c5"
        >
          ۹
        </span>
      </div>
      <div
        class="c6"
        dir="rtl"
      >
        <a
          class="c7"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </div>
  <div
    as="li"
    class="c2"
    dir="rtl"
  >
    <div
      class="c3"
    >
      <div
        class="c10"
        dir="rtl"
      >
        <span
          class="c5"
        >
          ۱۰
        </span>
      </div>
      <div
        class="c6"
        dir="rtl"
      >
        <a
          class="c7"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </div>
</ol>
`;
